--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_BASE_URL=http://localhost:3001
+NEXT_PUBLIC_API_BASE_URL=https://handsome-comfort-production.up.railway.app
 NEXT_PUBLIC_DEV_APPROVE_ENDPOINT=http://localhost:3001/api/dev/approve-me
 NEXT_PUBLIC_DEV_RESET_ENDPOINT=http://localhost:3001/api/dev/reset-status
 NEXT_PUBLIC_DEV_RESET_LIKE_ENDPOINT=http://localhost:3001/api/dev/reset-like-state
