reset機能を実装

--- a/.env.production.example
+++ b/.env.production.example
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_API_BASE_URL=https://gohan-nest-production.up.railway.app
+NEXT_PUBLIC_DEV_APPROVE_ENDPOINT=https://gohan-nest-production.up.railway.app/api/dev/approve-me
+NEXT_PUBLIC_DEV_RESET_ENDPOINT=https://gohan-nest-production.up.railway.app/api/dev/reset-status
+NEXT_PUBLIC_DEV_RESET_LIKE_ENDPOINT=https://gohan-nest-production.up.railway.app/api/dev/reset-like-state
+NEXT_PUBLIC_ADMIN_SEED_DELETE_ENDPOINT=https://gohan-nest-production.up.railway.app/api/admin/seed-admin
