--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@tanstack/react-query": "^5.29.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.378.0",
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.51.4",
+    "react-leaflet": "^4.2.1",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.21",
     "@types/node": "20.12.12",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
